cupt (2.8.4~) UNRELEASED; urgency=medium

  * lib:
    - system/worker:
      - 'changeSystem': preinstall hooks: pass original version strings of
        installed versions, not id-suffixed ones. (Closes: #764754)
    - cache:
      - Version pinning: fixed matching version strings of installed versions.
        (Closes: #764238)

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sun, 19 Oct 2014 14:38:36 +0300

cupt (2.8.3) unstable; urgency=medium

  * lib:
    - config:
      - New option 'cupt::console::actions-preview::show-empty-versions'.
    - system/resolvers/native:
      - For equal-scored version change variants, propose higher versions
        first. The regression for some typical upgrade situations was
        introduced in 2.8.0, the regression for some typical non-upgrade
        user requests was introduced in 2.6.0, and many non-typical cases
        probably never worked before.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sat, 04 Oct 2014 12:52:34 +0300

cupt (2.8.2) unstable; urgency=medium

  * test:
    - cmakelists:
      - Avoided trying symlinking a directory to itself for in-tree builds.
        Makes building succeed with CMake 3.0. (Closes: #758446)

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Wed, 20 Aug 2014 22:12:47 +0300

cupt (2.8.1) unstable; urgency=medium

  * lib,console:
    - Used more explicit syntax for initialization of some STL structures.
      Fixes builds with g++-4.9. (Closes: #746840)

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sun, 11 May 2014 16:33:18 +0300

cupt (2.8.0) experimental; urgency=low

  * lib:
    - system/resolvers/native:
      - 'upgrade': re-implemented in terms of 'satisfyRelationExpression'.
    - cache:
      - 'getSatisfyingVersions': minimal single-arch support for ':any'
        suffixes.
    - cache/relation:
      - Constructor: reject package names starting with an allowed symbol.
    - 'consumePackageName': allow ':' character.
  * test:
    - Introduced.
  * debian: